Added raw data view

--- a/index.html
+++ b/index.html
@@ -177,21 +177,13 @@
         <div class='row'>
             <div class='col-lg-12'>
                 <div class='divider'></div>
-                <p class='text-center'>Here is the raw data for suites.</p>
+                <p class='text-center'>Here is the raw data for suites, filtered by 
+                machines/platform and suite bucket.</p>
+                <div class='buttons'></div>
             </div>
         </div>
         <div class='row'>
-            <div class='col-lg-6 text-center' id='raw-pageload'></div>
-            <div class='col-lg-6 text-center' id='raw-rendering'></div>
-        </div>
-        <div class='row'>
-        </div>
-        <div class='row'>
-            <div class='col-lg-6 text-center' id='raw-scrolling'></div>
-            <div class='col-lg-6 text-center' id='raw-startup'></div>
-        </div>
-        <div class='row'>
-            <div class='col-lg-6 text-center' id='raw-javascript'></div>
+            <div class='col-lg-12 text-center' id='raw-charts'></div>
         </div>
     </div>
     <div class='container'>
