--- a/index.html
+++ b/index.html
@@ -186,18 +186,18 @@
             <div class='col-lg-12 text-center' id='raw-charts'></div>
         </div>
         <div class='row'>
-            <div class='col-lg-6 text-center' id='raw-charts-0'></div>
-            <div class='col-lg-6 text-center' id='raw-charts-1'></div>
+            <div class='col-lg-6 text-center raw-suite' id='raw-charts-0'></div>
+            <div class='col-lg-6 text-center raw-suite' id='raw-charts-1'></div>
         </div>
         <div class='row'>
         </div>
         <div class='row'>
-            <div class='col-lg-6 text-center' id='raw-charts-2'></div>
-            <div class='col-lg-6 text-center' id='raw-charts-3'></div>
+            <div class='col-lg-6 text-center raw-suite' id='raw-charts-2'></div>
+            <div class='col-lg-6 text-center raw-suite' id='raw-charts-3'></div>
         </div>
         <div class='row'>
-            <div class='col-lg-6 text-center' id='raw-charts-4'></div>
-            <div class='col-lg-6 text-center' id='raw-charts-5'></div>
+            <div class='col-lg-6 text-center raw-suite' id='raw-charts-4'></div>
+            <div class='col-lg-6 text-center raw-suite' id='raw-charts-5'></div>
         </div>
     </div>
     <div class='container'>
